--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/theme_primary</color>
+    <color name="colorPrimaryDark">@color/theme_primary_dark</color>
+    <color name="colorAccent">@color/theme_accent</color>
+
+    <!-- Theme colors. -->
+    <color name="theme_primary">#E53935</color>
+    <color name="theme_primary_dark">#C62828</color>
+    <color name="theme_accent">#cccccc</color>
+
+    <!-- FAB colors. -->
+    <color name="fab_color">#4DD0E1</color>
+    <color name="fab_color_pressed">#26C6DA</color>
+    <color name="fab_color_ripple">#80DEEA</color>
+    <color name="fab_item">#455A64</color>
+    <color name="fab_item_pressed">#37474F</color>
+
+    <!-- Text colors. -->
+    <color name="text_primary">#333333</color>
+    <color name="text_secondary">#888888</color>
+
+    <!-- Icon colors. -->
+    <color name="icon_tint">#838383</color>
+    <color name="icon_tint_selected">#009688</color>
 </resources>
